Fix price headers have white spacing in compact mode

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -492,6 +492,8 @@ footer .footer-below {
         border-width: 1px;
         border-style: solid;
         border-radius: 8px;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
